fix: content not showing due to hidden overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -14,7 +14,6 @@
 body {
   font-family: var(--font-bricolage);
   @apply antialiased;
-  overflow: hidden;
 }
 
 .body-container {
